--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -12,4 +12,5 @@ resources:
 - broker_v1alpha1_activemqartemissecurity.yaml
 - broker_v1beta1_activemqartemis.yaml
 - broker_v1beta1_activemqartemissecurity.yaml
+- broker_v1beta1_activemqartemisaddress.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
