--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -37,7 +37,7 @@ spec:
         # Valid values are debug, info, and error
         # from most to least.
         # If running entrypoint_debug then use '-- --zap-level debug'
-        - '--zap-level debug'
+        - '--zap-log-level debug'
         - '--zap-encoder console'
         - --leader-elect
         env:
