--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -15,6 +15,13 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+- apiGroups:
   - apps
   resources:
   - statefulsets
