--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -22,6 +22,13 @@ rules:
   - get
   - list
 - apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - get
+  - list
+- apiGroups:
   - apps
   resources:
   - statefulsets
