--- a/config/samples/artemis-basic-resources-deployment.yaml
+++ b/config/samples/artemis-basic-resources-deployment.yaml
@@ -6,4 +6,11 @@ spec:
   deploymentPlan:
     size: 1
     image: placeholder
+    resources:
+      limits:
+        cpu: "500m"
+        memory: "1024Mi"
+      requests:
+        cpu: "250m"
+        memory: "512Mi"
 
