--- a/config/crs/broker_activemqartemisscaledown_cr.yaml
+++ b/config/crs/broker_activemqartemisscaledown_cr.yaml
@@ -1,6 +1,6 @@
 apiVersion: broker.amq.io/v2alpha1
 kind: ActiveMQArtemisScaledown
 metadata:
-  name: activemqartemisscaledown-sample
+  name: ex-aaoscaledown
 spec:
-  # Add fields here
+  localOnly: true
