--- a/config/samples/address-create-auto-removed.yaml
+++ b/config/samples/address-create-auto-removed.yaml
@@ -1,7 +1,7 @@
-apiVersion: broker.amq.io/v2alpha3
+apiVersion: broker.amq.io/v1beta1
 kind: ActiveMQArtemisAddress
 metadata:
-  name: activemqartemisaddress-sample
+  name: ex-aaoaddress
 spec:
   addressName: emptyAddress
   queueName: ""
