--- a/config/manifests/bases/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/activemq-artemis-operator.clusterserviceversion.yaml
@@ -15,6 +15,12 @@ spec:
       displayName: Active MQArtemis Address
       kind: ActiveMQArtemisAddress
       name: activemqartemisaddresses.broker.amq.io
+      version: v1beta1
+    - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
+        API
+      displayName: Active MQArtemis Address
+      kind: ActiveMQArtemisAddress
+      name: activemqartemisaddresses.broker.amq.io
       version: v2alpha3
     - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
         API
@@ -64,6 +70,12 @@ spec:
       kind: ActiveMQArtemisScaledown
       name: activemqartemisscaledowns.broker.amq.io
       version: v2alpha1
+    - description: ActiveMQArtemisSecurity is the Schema for the activemqartemissecurities
+        API
+      displayName: Active MQArtemis Security
+      kind: ActiveMQArtemisSecurity
+      name: activemqartemissecurities.broker.amq.io
+      version: v1beta1
     - description: ActiveMQArtemisSecurity is the Schema for the activemqartemissecurities
         API
       displayName: Active MQArtemis Security
