--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -152,7 +152,14 @@ rules:
   - get
   - list
 - apiGroups:
-  - extensions
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
+  - create
+  - get
+- apiGroups:
+  - networking.k8s.io
   resources:
   - ingresses
   verbs:
@@ -161,13 +168,6 @@ rules:
   - get
   - list
   - watch
-- apiGroups:
-  - monitoring.coreos.com
-  resources:
-  - servicemonitors
-  verbs:
-  - create
-  - get
 - apiGroups:
   - route.openshift.io
   resources:
