Added descriptions to crds

--- a/config/crd/bases/broker.amq.io_activemqartemisscaledowns.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemisscaledowns.yaml
@@ -39,6 +39,8 @@ spec:
               ActiveMQArtemisScaledown
             properties:
               localOnly:
+                description: Triggered by main ActiveMQArtemis CRD messageMigration
+                  entry
                 type: boolean
             required:
             - localOnly
