Update Dockerfiles to use entrypoint scripts

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -31,7 +31,7 @@ spec:
         runAsNonRoot: true
       containers:
       - command:
-        - /manager
+        - /home/activemq-artemis-operator/bin/entrypoint
         args:
         # Explicitly set the logging level.
         # Valid values are debug, info, and error
