--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,12 +63,16 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.4
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2180
           value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.10
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2200
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.12
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.1
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2180
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.7
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2200
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.9
         image: controller:latest
         imagePullPolicy: Always
         name: manager
