--- a/config/manifests/bases/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/activemq-artemis-operator.clusterserviceversion.yaml
@@ -69,6 +69,12 @@ spec:
       displayName: Active MQArtemis Scaledown
       kind: ActiveMQArtemisScaledown
       name: activemqartemisscaledowns.broker.amq.io
+      version: v1beta1
+    - description: ActiveMQArtemisScaledown is the Schema for the activemqartemisscaledowns
+        API
+      displayName: Active MQArtemis Scaledown
+      kind: ActiveMQArtemisScaledown
+      name: activemqartemisscaledowns.broker.amq.io
       version: v2alpha1
     - description: ActiveMQArtemisSecurity is the Schema for the activemqartemissecurities
         API
