ENTMQBR-5876: Missed cleanup now cleaned up.

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,5 +13,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: default-route-openshift-image-registry.apps-crc.testing/activemq-artemis-operator/activemq-artemis-operator
-  newTag: 0.99.1
+  newName: quay.io/hgao/operator
+  newTag: 0.20.2
