--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -74,7 +74,7 @@ spec:
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2200
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.9
         image: controller:latest
-        imagePullPolicy: Always
+        # imagePullPolicy: Always
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
