support broker.properties via config map and map [string]string in CRD

--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -426,6 +426,10 @@ spec:
                   connecting to the broker and the web console. If left empty, it
                   will be generated.
                 type: string
+              brokerProperties:
+                additionalProperties:
+                  type: string
+                type: object
               connectors:
                 items:
                   properties:
