--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,5 +13,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/hgao/operator
-  newTag: 0.20.2
+  newName: quay.io/artemiscloud/activemq-artemis-operator
+  newTag: 1.0.0
