--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2
+        with:
+          go-version: '1.17.3'
 
       - name: Checkout the repo
         uses: actions/checkout@v2
